[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Myscriptfont-1Epg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/huds/hud/GameHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.187286
margin_bottom = 0.187256
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="."]
margin_left = 1.32913
margin_top = 0.601097
margin_right = 133.329
margin_bottom = 62.6011
custom_fonts/font = SubResource( 1 )
text = "ammo"

[node name="HealthLabel" type="Label" parent="."]
margin_left = 1.99774
margin_top = 60.59
margin_right = 174.998
margin_bottom = 122.59
custom_fonts/font = SubResource( 2 )
text = "health"

[node name="OxygenBar" type="ProgressBar" parent="."]
visible = false
margin_left = 18.5415
margin_top = 15.9195
margin_right = 22.5415
margin_bottom = 29.9195
